# schema-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  TESTING_GAPS.md  build-all.sh
.serena/: project.yml
schema-diagram-generator/: Cargo.toml  README.md
schema-diagram-generator/src/: lib.rs  main.rs
schema-diagram-generator/src/common/: column_type_label.rs  diagram_generator.rs  generate_options.rs  generator_format.rs  mod.rs
schema-diagram-generator/src/mermaid/: mermaid_generator.rs  mod.rs
schema-diagram-generator/src/plantuml/: mod.rs  plantuml_generator.rs
schema-diff/: Cargo.toml  README.md
schema-diff/src/: change.rs  change_set.rs  diff_engine.rs  lib.rs  tests.rs
schema-installer/: Cargo.toml  README.md
schema-installer/src/: config.rs  connection.rs  error.rs  installer.rs  lib.rs  main.rs  migration.rs  migrator.rs  sql_split.rs  tracking.rs
schema-installer/tests/: integration_tests.rs  postgres_integration_tests.rs  simple-test-schema.xml  sqlite_integration_tests.rs  sqlserver_integration_tests.rs
schema-installer/tests/fixtures/postgres/: V1__create_widgets.sql  V2__add_widget_color.sql
schema-installer/tests/fixtures/sqlite/: V1__create_widgets.sql
schema-installer/tests/fixtures/sqlserver/: V1__create_widgets.sql  V2__add_widget_color.sql
schema-migration-generator/: Cargo.toml  README.md
schema-migration-generator/src/: error.rs  generator_factory.rs  lib.rs  migration_generator.rs  tests.rs
schema-migration-generator/src/postgresql/: mod.rs
schema-migration-generator/src/sqlite/: mod.rs
schema-migration-generator/src/sqlserver/: mod.rs
schema-model/: Cargo.toml  README.md
schema-model/src/: lib.rs
schema-model/src/builder/: builder2.rs  column.rs  database.rs  key.rs  mod.rs  schema.rs  table.rs
schema-model/src/model/: aggregation.rs  column.rs  column_type.rs  constraint.rs  database.rs  database_model.rs  enum_type.rs  function.rs  initial_data.rs  key.rs  mod.rs  other_sql.rs  procedure.rs  procedures.rs  relation.rs  schema.rs  table.rs  trigger.rs  types.rs  version.rs  view.rs
schema-parser/: Cargo.toml  README.md
schema-parser/resources/: schema-parser-empty-schema.xml  schema-parser-example-schema.xml  schema-parser-test-schema-mermaid.md  schema-parser-test-schema-plantuml.md  schema-parser-test-schema-postgres.sql  schema-parser-test-schema.sql  schema-parser-test-schema.xml  schema.xsd
schema-parser/src/: lib.rs
schema-parser/src/parser/: convert.rs  database.rs  mod.rs  nodes.rs  parser.rs  roxml_parser.rs  table_parser.rs
schema-parser/tests/: parser_integration_tests.rs
schema-parser/tests/resources/: schema-parser-empty-schema.xml  schema-parser-example-schema.xml  schema-parser-test-schema-mysql.sql  schema-parser-test-schema-postgres.sql  schema-parser-test-schema-sqlserver.sql  schema-parser-test-schema.xml
schema-sql-generator/: Cargo.toml  README.md
schema-sql-generator/src/: lib.rs  main.rs
schema-sql-generator/src/common/: column_constraint_generator.rs  column_generator.rs  column_type_generator.rs  function_generator.rs  generate_options.rs  generator_context.rs  generator_type.rs  index_generator.rs  key_generator.rs  mod.rs  other_sql_generator.rs  output_mode.rs  print_writer.rs  procedure_generator.rs  relation_generator.rs  sql_generator.rs  sql_generator_settings.rs  sql_writer.rs  table_constraint_generator.rs  table_generator.rs  test_support.rs  trigger_generator.rs  view_generator.rs
schema-sql-generator/src/h2/: h2_column_constraint_generator.rs  h2_column_generator.rs  h2_column_type_generator.rs  h2_function_generator.rs  h2_generator.rs  h2_index_generator.rs  h2_key_generator.rs  h2_other_sql_generator.rs  h2_procedure_generator.rs  h2_relation_generator.rs  h2_table_constraint_generator.rs  h2_table_generator.rs  h2_trigger_generator.rs  h2_view_generator.rs  mod.rs
schema-sql-generator/src/mysql/: mod.rs  mysql_column_constraint_generator.rs  mysql_column_generator.rs  mysql_column_type_generator.rs  mysql_function_generator.rs  mysql_generator.rs  mysql_index_generator.rs  mysql_key_generator.rs  mysql_other_sql_generator.rs  mysql_procedure_generator.rs  mysql_relation_generator.rs  mysql_table_constraint_generator.rs  mysql_table_generator.rs  mysql_trigger_generator.rs  mysql_view_generator.rs
schema-sql-generator/src/postgresql/: mod.rs  postgres_column_constraint_generator.rs  postgres_column_generator.rs  postgres_column_type_generator.rs  postgres_function_generator.rs  postgres_generator.rs  postgres_index_generator.rs  postgres_key_generator.rs  postgres_other_sql_generator.rs  postgres_procedure_generator.rs  postgres_relation_generator.rs  postgres_table_constraint_generator.rs  postgres_table_generator.rs  postgres_trigger_generator.rs  postgres_util.rs  postgres_view_generator.rs
schema-sql-generator/src/sqlite/: mod.rs  sqlite_column_constraint_generator.rs  sqlite_column_generator.rs  sqlite_column_type_generator.rs  sqlite_function_generator.rs  sqlite_generator.rs  sqlite_index_generator.rs  sqlite_key_generator.rs  sqlite_other_sql_generator.rs  sqlite_procedure_generator.rs  sqlite_relation_generator.rs  sqlite_table_constraint_generator.rs  sqlite_table_generator.rs  sqlite_trigger_generator.rs  sqlite_view_generator.rs
schema-sql-generator/src/sqlserver/: mod.rs  sqlserver_column_constraint_generator.rs  sqlserver_column_generator.rs  sqlserver_column_type_generator.rs  sqlserver_function_generator.rs  sqlserver_generator.rs  sqlserver_index_generator.rs  sqlserver_key_generator.rs  sqlserver_other_sql_generator.rs  sqlserver_procedure_generator.rs  sqlserver_relation_generator.rs  sqlserver_table_constraint_generator.rs  sqlserver_table_generator.rs  sqlserver_trigger_generator.rs  sqlserver_view_generator.rs
schema-sql-generator/tests/resources/: uniportal-schema.xml
