[workspace]
resolver = "3"
members = [
    "schema-installer",
    "schema-model",
    "schema-parser",
    "schema-sql-generator",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jeff Stano <jeff@stano.com>"]
description = "A set of tools to manage relational database schemas"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/jstano/rust-schema"
readme = "README.md"
keywords = ["schema"]
