[workspace]
resolver = "3"
members = [
    "schema-diagram-generator",
    "schema-diff",
    "schema-installer",
    "schema-migration-generator",
    "schema-model",
    "schema-parser",
    "schema-sql-generator",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Jeff Stano <jeff@stano.com>"]
description = "A set of tools to manage relational database schemas"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/jstano/rust-schema"
readme = "README.md"
keywords = ["schema"]

[workspace.dependencies]
schema-model = { version = "0.2.0", path = "schema-model" }
schema-parser = { version = "0.2.0", path = "schema-parser" }
schema-sql-generator = { version = "0.2.0", path = "schema-sql-generator" }
schema-diff = { version = "0.2.0", path = "schema-diff" }
