[package]
name = "schema-diagram-generator"
description.workspace = true
documentation = "https://docs.rs/schema-diagram-generator"
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
edition.workspace = true
version.workspace = true

[[bin]]
name = "schema-diagram-generator"
path = "src/main.rs"

[dependencies]
schema-model.workspace = true
schema-parser.workspace = true
clap = "^4.5.50"
