[package]
name = "schema-diff"
description.workspace = true
documentation = "https://docs.rs/schema-diff"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
schema-model.workspace = true
thiserror = "2"
