[package]
name = "schema-installer"
description.workspace = true
documentation = "https://docs.rs/schema-installer"
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
edition.workspace = true
version.workspace = true

[dependencies]
schema-model.workspace = true
schema-parser.workspace = true
schema-sql-generator.workspace = true

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "any", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "schema-installer"
path = "src/main.rs"
