[package]
name = "schema-migration-generator"
description.workspace = true
documentation = "https://docs.rs/schema-migration-generator"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
schema-model.workspace = true
schema-diff.workspace = true
thiserror = "2"
