[package]
name = "schema-parser"
license = "MIT OR Apache-2.0"
edition.workspace = true
version.workspace = true

[dependencies]
schema-model = { path = "../schema-model" }
rust-embed = "^8.7.2"
quick-xml = { version = "^0.38.3", features = ["serialize"] }
roxmltree = "^0.20"
serde = { version = "^1", features = ["derive"] }
