[package]
name = "schema-parser"
description.workspace = true
documentation = "https://docs.rs/schema-parser"
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
edition.workspace = true
version.workspace = true

[dependencies]
schema-model.workspace = true
schema-xsd = "1.0.0"
rust-embed = "^8.7.2"
quick-xml = { version = "^0.38.3", features = ["serialize"] }
roxmltree = "^0.20"
serde = { version = "^1", features = ["derive"] }
