[package]
name = "schema-sql-generator"
description.workspace = true
documentation = "https://docs.rs/schema-sql-generator"
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
edition.workspace = true
version.workspace = true

[dependencies]
schema-model.workspace = true
schema-parser.workspace = true
clap = "^4.5.50"
rust_string_utils = "^0.1.20"
